feature/administrator-section: support panel UI fix in theme section
